saves/test/demo_full_20240802_193545/kmap3/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp kmap3_tb.v kmap3.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
kmap3_tb.v:112: $finish called at 160000 (1ps)

iverilog cmd 2 error:

